# oauth-integration-test

./: .gitignore  main.py  pyproject.toml
config/: providers.yaml
templates/: base.html  github_search.html  google_drive_search.html  google_search.html  index.html  search.html
